--- a/Aier360/Controllers/校园/我的ic卡+打卡记录/ICCard.storyboard
+++ b/Aier360/Controllers/校园/我的ic卡+打卡记录/ICCard.storyboard
@@ -99,6 +99,7 @@
                         <outlet property="tableView" destination="U1i-CI-9uO" id="2w6-U2-oR9"/>
                         <segue destination="SS1-kk-Uk9" kind="show" identifier="my" id="zMt-zo-ETe"/>
                         <segue destination="shn-8k-54I" kind="show" identifier="teachers" id="L8r-P1-wpF"/>
+                        <segue destination="Mgd-ZQ-eDN" kind="show" identifier="class" id="i86-7x-nzb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YGh-JZ-YTV" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -520,7 +521,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CdA-fG-1rQ">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vBt-cw-r0B">
+                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vBt-cw-r0B">
                                         <rect key="frame" x="563" y="11" width="29" height="21"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="21" id="IWq-9z-e4U"/>
@@ -572,7 +573,7 @@
                                                 </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <inset key="imageEdgeInsets" minX="125" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                                <state key="normal" title="2014-09-09" image="drop_arrow_down">
+                                                <state key="normal" title="今天" image="drop_arrow_down">
                                                     <color key="titleColor" red="0.31764705879999999" green="0.31764705879999999" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
                                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                 </state>
